test/modules/lydia/test-modSameNameBadRequire2.chpl
use modSameNameAsFileBadRequire2;

writeln(inner);
